fix: alignment of items

--- a/client/src/output.css
+++ b/client/src/output.css
@@ -806,6 +806,14 @@ video {
   align-items: center;
 }
 
+.items-stretch {
+  align-items: stretch;
+}
+
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-center {
   justify-content: center;
 }
